syntax = "proto3";

package perpetuals.market.v1;
option csharp_namespace = "Perpetuals.Market.Protobuf";

enum OrderTimeInForce {
    GoodUntilFilled = 0;
}